[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app_utilities"
version = "0.0.1"
authors = [
  {name = "Milan Kundra", email = "kundra.milan@uk.sika.com"},
]
dependencies = [
  "numpy>=1.0.0",
]
description = "Package containing utility functions for apps."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sikauk-rad/app-utilities"